// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculate aide-déclaration-indépendant: ACRE 1`] = `"[11369,50000,33996,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 2`] = `"[3263,15000,10282,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 3`] = `"[1369,5000,3083,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 4`] = `"[606,10000,8392,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: ACRE 5`] = `"[2204,10000,6794,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: IJSS (indemnité sécurité sociale) 1`] = `"[11409,50000,34048,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: RSA 1`] = `"[82,500,279,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: RSA 2`] = `"[1021,5000,3431,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: aide covid 2020 1`] = `"[9021,50000,37539,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: aide covid 2020 2`] = `"[0,5000,4881,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: aide covid 2020 3`] = `"[33,15000,14803,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: aide covid 2020 4`] = `"[7546,35000,24814,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 1`] = `"[14093,50000,31238,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 2`] = `"[13578,50000,31753,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 3`] = `"[11461,50000,33870,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 4`] = `"[14098,50000,31253,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: conjoint collaborateur 5`] = `"[11461,50000,33870,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: débit de tabac 1`] = `"[5652,50000,39713,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: international 1`] = `"[14610,50000,35287,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: international 2`] = `"[11875,50000,36215,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 1`] = `"[11365,50000,33986,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 2`] = `"[1368,5000,3069,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 3`] = `"[11369,50000,33996,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 4`] = `"[1369,5000,3083,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 5`] = `"[11369,50000,33996,0,0,1,1]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 6`] = `"[1369,5000,3083,0,0,1,1]"`;

exports[`calculate aide-déclaration-indépendant: nature de l'activité 7`] = `"[9454,50000,35911,0,0,1,1]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 1`] = `
"[1042,500,-681,0,1,1,0]
Notifications affichées : entreprise . imposition . IR . information sur le report de déficit"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 2`] = `
"[1042,1000,-226,0,1,1,0]
Notifications affichées : entreprise . imposition . IR . information sur le report de déficit"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 3`] = `"[1067,1500,203,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 4`] = `"[1110,2000,614,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 5`] = `"[1369,5000,3083,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 6`] = `"[2204,10000,6794,0,1,1,0]"`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 7`] = `
"[20929,100000,69895,0,1,1,0]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate aide-déclaration-indépendant: échelle de revenus 8`] = `
"[106448,1000000,802634,0,1,1,0]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-artiste-auteur: bnc 1`] = `"[1230]"`;

exports[`calculate simulations-artiste-auteur: bnc 2`] = `"[1863]"`;

exports[`calculate simulations-artiste-auteur: bnc 3`] = `
"[931]
Notifications affichées : artiste-auteur . cotisations . avertissement trimestres retraite"
`;

exports[`calculate simulations-artiste-auteur: salarié 1`] = `
"[160]
Notifications affichées : artiste-auteur . cotisations . avertissement trimestres retraite"
`;

exports[`calculate simulations-artiste-auteur: salarié 2`] = `"[1603]"`;

exports[`calculate simulations-artiste-auteur: salarié 3`] = `"[12410]"`;

exports[`calculate simulations-auto-entrepreneur: ACRE 1`] = `"[22966,247,20000,0,20000]"`;

exports[`calculate simulations-auto-entrepreneur: ACRE 2`] = `
"[22633,219,20000,0,20000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 3`] = `"[34449,371,30000,0,30000]"`;

exports[`calculate simulations-auto-entrepreneur: ACRE 4`] = `
"[45267,439,40000,0,40000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: ACRE 5`] = `
"[21394,116,20000,0,20000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur: activité mixte 1`] = `"[20000,292,16499,0,16499]"`;

exports[`calculate simulations-auto-entrepreneur: activité mixte 2`] = `"[20000,317,16193,0,16193]"`;

exports[`calculate simulations-auto-entrepreneur: activité mixte 3`] = `"[20000,297,16438,0,16438]"`;

exports[`calculate simulations-auto-entrepreneur: aides 1`] = `"[5742,62,5000,0,5000]"`;

exports[`calculate simulations-auto-entrepreneur: aides 2`] = `"[57415,618,50000,237,49763]"`;

exports[`calculate simulations-auto-entrepreneur: impôt sur le revenu 1`] = `"[32092,591,25000,706,24294]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 1`] = `"[574,6,500,0,500]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 2`] = `"[1148,12,1000,0,1000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 3`] = `"[2296,25,2000,0,2000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 4`] = `"[5742,62,5000,0,5000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 5`] = `"[11483,124,10000,0,10000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 6`] = `"[22966,247,20000,0,20000]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 7`] = `"[57415,618,50000,237,49763]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 8`] = `"[80381,865,70000,1301,68699]"`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 9`] = `
"[114830,1236,100000,3912,96088]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-auto-entrepreneur: échelle de revenus 10`] = `
"[1148303,12359,1000000,131653,868347]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement, entreprise . imposition . IR . micro-fiscal . alerte seuil dépassés"
`;

exports[`calculate simulations-dividendes: barème couple 2 enfants 1`] = `"[200,166,34,0,112,112,0]"`;

exports[`calculate simulations-dividendes: barème couple 2 enfants 2`] = `"[20000000,11149363,3440000,5410637,11184000,11184000,48]"`;

exports[`calculate simulations-dividendes: barème couple 2 enfants 3`] = `"[200,112,34,40,112,112,36]"`;

exports[`calculate simulations-dividendes: barème couple 2 enfants 4`] = `"[20000,13204,3440,613,11184,11184,5]"`;

exports[`calculate simulations-dividendes: barème défauts 1`] = `"[200,166,34,0,112,112,0]"`;

exports[`calculate simulations-dividendes: barème défauts 2`] = `"[20000000,11113031,3440000,5446969,11184000,11184000,49]"`;

exports[`calculate simulations-dividendes: barème défauts 3`] = `"[200,111,34,47,112,112,42]"`;

exports[`calculate simulations-dividendes: barème défauts 4`] = `"[20000,13205,3440,2244,11184,11184,20]"`;

exports[`calculate simulations-dividendes: pfu 1`] = `"[200,140,34,26,120,120,0]"`;

exports[`calculate simulations-dividendes: pfu 2`] = `"[20000000,14000000,3440000,2560000,12000000,12000000,0]"`;

exports[`calculate simulations-impot-société: bénéfices 1`] = `
"[0,0]
Notifications affichées : entreprise . imposition . IS . information sur le report de déficit"
`;

exports[`calculate simulations-impot-société: bénéfices 2`] = `"[0,0]"`;

exports[`calculate simulations-impot-société: bénéfices 3`] = `"[300,0]"`;

exports[`calculate simulations-impot-société: bénéfices 4`] = `"[3000,0]"`;

exports[`calculate simulations-impot-société: bénéfices 5`] = `"[48628,0]"`;

exports[`calculate simulations-impot-société: bénéfices 6`] = `
"[525628,0]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-impot-société: bénéfices 7`] = `
"[5295628,149646]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-impot-société: prorata temporis 1`] = `
"[260628,0]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-impot-société: prorata temporis 2`] = `
"[277936,0]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-impot-société: prorata temporis 3`] = `
"[272981,0]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant: acre 1`] = `"[73019,23019,50000,51980,9516,40484,0,73019,1408]"`;

exports[`calculate simulations-indépendant: activité 1`] = `"[29086,9086,20000,20787,898,19102,0,29086,3559]"`;

exports[`calculate simulations-indépendant: activité 2`] = `"[29102,9102,20000,20787,898,19102,0,29102,3575]"`;

exports[`calculate simulations-indépendant: conjoint collaborateur 1`] = `"[77175,27175,50000,52092,9550,40450,0,77175,7308]"`;

exports[`calculate simulations-indépendant: conjoint collaborateur 2`] = `"[78236,28236,50000,52121,9558,40442,0,78236,4487]"`;

exports[`calculate simulations-indépendant: conjoint collaborateur 3`] = `"[80757,30757,50000,52189,9579,40421,0,80757,4811]"`;

exports[`calculate simulations-indépendant: conjoint collaborateur 4`] = `"[75298,25298,50000,52041,9534,40466,0,75298,3809]"`;

exports[`calculate simulations-indépendant: conjoint collaborateur 5`] = `"[75297,25297,50000,52041,9534,40466,0,75297,3951]"`;

exports[`calculate simulations-indépendant: conjoint collaborateur 6`] = `
"[652221,152221,500000,517706,220485,279515,0,652221,4487]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant: cotisations facultatives 1`] = `"[30000,13181,16819,17881,433,16386,0,30000,3559]"`;

exports[`calculate simulations-indépendant: cotisations facultatives 2`] = `"[30000,14381,15619,17881,433,15186,0,30000,3559]"`;

exports[`calculate simulations-indépendant: cotisations facultatives 3`] = `"[30000,10381,19619,20431,841,18778,0,30000,3559]"`;

exports[`calculate simulations-indépendant: cotisations facultatives 4`] = `"[20000,6732,13268,13809,0,13268,0,20000,3559]"`;

exports[`calculate simulations-indépendant: cotisations facultatives 5`] = `
"[300000,79617,220383,228526,82145,138238,0,300000,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant: cotisations facultatives 6`] = `
"[300000,83117,216883,225026,80570,136313,0,300000,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant: cotisations minimales 1`] = `"[1375,1275,100,135,0,100,0,1375,3559]"`;

exports[`calculate simulations-indépendant: cotisations minimales 2`] = `"[244,144,100,104,0,100,0,244,3211]"`;

exports[`calculate simulations-indépendant: exonération pension invalidité 1`] = `
"[45000,10908,34092,35311,4515,29577,0,45000,2350]
Notifications affichées : dirigeant . indépendant . cotisations et contributions . exonérations . pension invalidité"
`;

exports[`calculate simulations-indépendant: imposition à l'IS 1`] = `
"[100000,30100,69900,72612,15030,54870,0,100000,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant: imposition à l'IS 2`] = `
"[100000,30100,69900,72612,15030,54870,0,100000,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant: impôt sur le revenu 1`] = `"[29086,9086,20000,20787,603,19397,0,29086,3559]"`;

exports[`calculate simulations-indépendant: impôt sur le revenu 2`] = `"[73019,23019,50000,51980,8213,41787,0,73019,3559]"`;

exports[`calculate simulations-indépendant: impôt sur le revenu 3`] = `"[29086,9086,20000,20787,2079,17921,0,29086,3559]"`;

exports[`calculate simulations-indépendant: inversions 1`] = `"[2000,1386,614,666,0,614,0,2000,3559]"`;

exports[`calculate simulations-indépendant: inversions 2`] = `"[50000,16004,33996,35351,4527,29469,0,50000,3559]"`;

exports[`calculate simulations-indépendant: inversions 3`] = `"[14597,4597,10000,10394,0,10000,0,14597,3559]"`;

exports[`calculate simulations-indépendant: inversions 4`] = `"[72000,22703,49297,51249,9297,40000,0,72000,3559]"`;

exports[`calculate simulations-indépendant: inversions 5`] = `"[14597,4597,10000,10394,0,10000,1000,15597,3559]"`;

exports[`calculate simulations-indépendant: inversions 6`] = `"[19000,5929,13071,13584,0,13071,1000,20000,3559]"`;

exports[`calculate simulations-indépendant: inversions 7`] = `"[18000,5627,12373,12860,0,12373,2000,20000,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 1`] = `"[1861,1361,500,548,0,500,0,1861,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 2`] = `"[2466,1466,1000,1064,0,1000,0,2466,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 3`] = `"[3075,1575,1500,1581,0,1500,0,3075,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 4`] = `"[3683,1683,2000,2097,0,2000,0,3683,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 5`] = `"[7428,2428,5000,5199,0,5000,0,7428,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 6`] = `"[14597,4597,10000,10394,0,10000,0,14597,3559]"`;

exports[`calculate simulations-indépendant: échelle de revenus 7`] = `
"[139589,39589,100000,103788,28275,71725,0,139589,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant: échelle de revenus 8`] = `
"[1239948,239948,1000000,1033666,473305,526695,0,1239948,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales: CIPAV 1`] = `"[3277,0,2777,500,0,500]"`;

exports[`calculate simulations-professions-libérales: CIPAV 2`] = `"[3838,0,2838,1000,0,1000]"`;

exports[`calculate simulations-professions-libérales: CIPAV 3`] = `"[4398,0,2898,1500,0,1500]"`;

exports[`calculate simulations-professions-libérales: CIPAV 4`] = `"[4959,0,2959,2000,0,2000]"`;

exports[`calculate simulations-professions-libérales: CIPAV 5`] = `"[8377,0,3377,5000,0,5000]"`;

exports[`calculate simulations-professions-libérales: CIPAV 6`] = `"[14552,0,4552,10000,0,10000]"`;

exports[`calculate simulations-professions-libérales: CIPAV 7`] = `
"[147523,0,47523,100000,28363,71637]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales: CIPAV 8`] = `
"[1239427,0,239427,1000000,473298,526702]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 1`] = `"[30000,0,8060,21940,1212,20728]"`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 2`] = `"[30000,0,8381,21619,1160,20459]"`;

exports[`calculate simulations-professions-libérales: auxiliaire médical 3`] = `"[300000,0,62709,237291,89754,147537]"`;

exports[`calculate simulations-professions-libérales: avocat 1`] = `
"[50000,0,11135,38865,5988,32877]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales: avocat 2`] = `
"[50000,0,11805,38195,5787,32408]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales: expert-comptable 1`] = `"[20000,0,5014,14986,57,14929]"`;

exports[`calculate simulations-professions-libérales: expert-comptable 2`] = `
"[50000,0,14816,35184,4884,30300]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales: médecin 1`] = `"[50000,0,14246,35754,5055,30699]"`;

exports[`calculate simulations-professions-libérales: médecin 2`] = `"[50000,0,21962,28038,2740,25298]"`;

exports[`calculate simulations-professions-libérales: médecin 3`] = `"[300000,0,87748,212252,78486,133766]"`;

exports[`calculate simulations-professions-libérales: médecin 4`] = `"[400000,0,107868,292132,117244,174888]"`;

exports[`calculate simulations-professions-libérales: médecin 5`] = `
"[120000,0,36415,83585,21327,62258]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales: médecin 6`] = `"[50000,0,14246,35754,5055,30699]"`;

exports[`calculate simulations-professions-libérales: sage-femme 1`] = `"[50000,0,12451,37549,5593,31956]"`;

exports[`calculate simulations-professions-libérales: sage-femme 2`] = `
"[20000,0,5178,14822,31,14791]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 3`] = `
"[4000,0,1313,2687,0,2687]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, dirigeant . indépendant . PL . CARCDSF . sage-femme . exonération PCV"
`;

exports[`calculate simulations-professions-libérales: sage-femme 4`] = `
"[20000,0,5178,14822,31,14791]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 5`] = `
"[20000,0,5255,14745,18,14727]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales: sage-femme 6`] = `
"[20000,0,5332,14668,6,14662]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 1`] = `
"[606,7272,0,7127,4,13]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 2`] = `
"[1249,14993,0,14429,4,26]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): ACRE 3`] = `
"[1893,22714,0,21731,4,40]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 1`] = `"[1391,16698,0,16041,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 2`] = `"[1391,16698,0,16041,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 3`] = `"[1391,16698,0,16041,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 4`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 5`] = `"[14490,173883,0,150669,4,47]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 6`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): Contrats Madelin 7`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 1`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 2`] = `"[917,10998,0,10651,4,0]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 3`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 4`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): activités 5`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): avec charges 1`] = `"[442,5299,0,5261,4,10]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): avec charges 2`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 1`] = `"[-30,-361,0,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 2`] = `"[14,170,0,136,0,1]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 3`] = `"[62,740,0,314,0,2]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 4`] = `"[204,2450,0,2566,2,5]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 5`] = `"[442,5299,0,5261,4,10]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 6`] = `"[917,10998,0,10651,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 7`] = `"[2341,28096,0,26822,4,47]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié): échelle de rémunération 8`] = `"[4758,57101,0,51817,4,47]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 1`] = `
"[0,9349,9349,1450,2,0]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 2`] = `
"[0,18697,18697,2900,3,8]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): ACRE 3`] = `
"[0,28046,28046,4350,4,12]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 1`] = `"[0,34834,34834,5800,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 2`] = `"[0,34834,34834,5800,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 3`] = `"[0,34834,34834,5800,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 4`] = `"[0,18288,18288,3045,4,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 5`] = `
"[0,274318,274318,20568,4,56]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement, entreprise . imposition . IR . micro-fiscal . alerte seuil dépassés"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 6`] = `"[0,17852,17852,2973,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): Contrats Madelin 7`] = `"[0,17417,17417,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 1`] = `"[0,15580,15580,6600,4,18]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 2`] = `"[0,15520,15520,6600,4,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 3`] = `"[0,17336,17336,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 4`] = `"[0,17417,17417,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): activités 5`] = `"[0,15580,15580,5000,4,14]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): avec charges 1`] = `"[0,10450,10450,1740,3,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): avec charges 2`] = `"[0,30480,30480,5075,4,14]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 1`] = `"[0,87,87,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 2`] = `"[0,871,871,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 3`] = `"[0,1742,1742,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 4`] = `"[0,4354,4354,725,1,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 5`] = `"[0,8709,8709,1450,2,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 6`] = `"[0,17417,17417,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 7`] = `"[0,43543,43543,7250,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur): échelle de rémunération 8`] = `
"[0,87085,87085,14500,4,40]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 1`] = `"[0,8392,0,6071,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 2`] = `"[0,16871,0,12238,4,24]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): ACRE 3`] = `"[0,22330,0,16232,4,32]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 1`] = `"[0,16819,0,15017,4,24]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 2`] = `"[0,15619,0,15017,4,24]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 3`] = `"[0,19619,0,15017,4,28]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 4`] = `"[0,13268,0,10023,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 5`] = `
"[0,220383,0,57390,4,56]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 6`] = `"[0,13168,0,10023,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): Contrats Madelin 7`] = `"[0,6868,0,10023,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 1`] = `"[0,13768,0,10023,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 2`] = `"[0,14409,0,null,4,0]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 3`] = `"[0,13758,0,10017,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 4`] = `"[0,13768,0,10023,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): activités 5`] = `"[0,13768,0,10023,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): avec charges 1`] = `"[0,6794,0,4966,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): avec charges 2`] = `"[0,13768,0,10023,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 1`] = `
"[0,-1045,0,2366,2,21]
Notifications affichées : entreprise . imposition . IR . information sur le report de déficit"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 2`] = `
"[0,-226,0,2366,2,21]
Notifications affichées : entreprise . imposition . IR . information sur le report de déficit"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 3`] = `"[0,614,0,2520,2,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 4`] = `"[0,3083,0,3032,2,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 5`] = `"[0,6794,0,4966,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 6`] = `"[0,13768,0,10023,4,21]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 7`] = `"[0,33996,0,24795,4,48]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant): échelle de rémunération 8`] = `
"[0,69900,0,36188,4,56]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-salarié: CCN HCR 1`] = `
"[3536,0,2500,2005,1894]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN batiment 1`] = `
"[3948,0,2500,1987,1878]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN batiment 2`] = `
"[3917,0,2500,1972,1864]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN batiment 3`] = `
"[3975,0,2500,1979,1867]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN compta 1`] = `
"[3431,0,2500,2006,1898]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN optique 1`] = `
"[3585,0,2500,2068,1953]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN spectacle vivant 1`] = `
"[3796,0,2500,2155,2039]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: CCN sport 1`] = `
"[535,0,500,374,374]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: JEI 1`] = `"[3434,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: JEI 2`] = `
"[26574,0,20000,15969,10359]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: JEI 3`] = `"[4511,0,4000,3141,2745]"`;

exports[`calculate simulations-salarié: activité partielle 1`] = `
"[20,0,1560,1247,1247]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: activité partielle 2`] = `"[980,0,4000,2220,2098]"`;

exports[`calculate simulations-salarié: activité partielle 3`] = `"[2223,0,8000,4462,3639]"`;

exports[`calculate simulations-salarié: activité partielle 4`] = `"[1614,0,4000,2405,2217]"`;

exports[`calculate simulations-salarié: activité partielle 5`] = `"[2903,0,4000,2683,2406]"`;

exports[`calculate simulations-salarié: activité partielle 6`] = `"[740,3750,3000,1660,1609]"`;

exports[`calculate simulations-salarié: activité partielle 7`] = `"[980,0,4000,2220,2185]"`;

exports[`calculate simulations-salarié: activité partielle 8`] = `"[351,0,2000,1578,1544]"`;

exports[`calculate simulations-salarié: activité partielle 9`] = `"[1216,0,2000,1570,1536]"`;

exports[`calculate simulations-salarié: activité partielle 10`] = `"[2360,0,6000,4182,3498]"`;

exports[`calculate simulations-salarié: activité partielle 11`] = `"[4392,0,9000,6147,4790]"`;

exports[`calculate simulations-salarié: aides 1`] = `"[2296,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 2`] = `
"[12819,0,10000,8911,7538]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé, contrat salarié . régime des impatriés . information"
`;

exports[`calculate simulations-salarié: aides 3`] = `"[2002,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 4`] = `
"[2609,0,2000,1720,1656]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: aides 5`] = `"[1836,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides 6`] = `"[2086,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: aides embauche covid 1`] = `
"[1232,0,1500,1165,1165]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: aides embauche covid 2`] = `"[7079,0,5000,3948,3298]"`;

exports[`calculate simulations-salarié: aides embauche covid 3`] = `
"[1443,0,1500,1284,1284]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: aides embauche covid 4`] = `
"[881,0,1500,1454,1454]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: apprentissage 1`] = `
"[1547,0,1500,1454,1454]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: apprentissage 2`] = `
"[1381,0,1500,1454,1454]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: assimilé salarié 1`] = `"[7010,0,5000,3943,3286]"`;

exports[`calculate simulations-salarié: assimilé salarié 2`] = `"[2121,0,1500,1163,1163]"`;

exports[`calculate simulations-salarié: assimilé salarié 3`] = `"[4222,0,3000,2348,2161]"`;

exports[`calculate simulations-salarié: atmp 1`] = `"[2474,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: avantages 1`] = `"[2607,0,2000,1540,1490]"`;

exports[`calculate simulations-salarié: avantages 2`] = `"[2617,0,2000,1539,1489]"`;

exports[`calculate simulations-salarié: avantages 3`] = `"[2527,0,2000,1549,1500]"`;

exports[`calculate simulations-salarié: cadre 1`] = `"[4116,0,3000,2348,2160]"`;

exports[`calculate simulations-salarié: cdd 1`] = `
"[3234,0,2200,1894,1815]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 2`] = `
"[3509,0,2200,2009,1897]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 3`] = `
"[3781,0,2200,2197,2084]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 4`] = `
"[4104,0,2200,2387,2262]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: cdd 5`] = `
"[3795,0,2200,1920,1841]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: contrat pro 1`] = `"[899,0,1500,1165,1165]"`;

exports[`calculate simulations-salarié: contrat pro 2`] = `"[1566,0,1500,1165,1165]"`;

exports[`calculate simulations-salarié: effectif 1`] = `"[2419,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 2`] = `"[2466,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 3`] = `"[2479,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: effectif 4`] = `"[2479,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: frais pro - DFS 1`] = `"[2138,0,2000,1630,1630]"`;

exports[`calculate simulations-salarié: frais pro - DFS 2`] = `"[2259,0,2000,1584,1549]"`;

exports[`calculate simulations-salarié: frais pro - DFS 3`] = `"[2190,0,2000,1606,1557]"`;

exports[`calculate simulations-salarié: frais pro - DFS 4`] = `"[2190,0,2000,1606,1557]"`;

exports[`calculate simulations-salarié: frais pro - DFS 5`] = `"[2419,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: frais pro - DFS 6`] = `"[1764,0,1700,1358,1358]"`;

exports[`calculate simulations-salarié: frais pro - DFS 7`] = `"[3281,0,2600,2125,2092]"`;

exports[`calculate simulations-salarié: frais pro - abo transports + transports personnels 1`] = `"[4382,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié: frais pro - abo transports + transports personnels 2`] = `"[5012,0,3200,2916,2619]"`;

exports[`calculate simulations-salarié: frais pro - abo transports + transports personnels 3`] = `"[4688,0,3200,2836,2637]"`;

exports[`calculate simulations-salarié: frais pro - abonnement transports publics 1`] = `"[4380,0,3200,2551,2354]"`;

exports[`calculate simulations-salarié: frais pro - abonnement transports publics 2`] = `"[5090,0,3200,3261,3064]"`;

exports[`calculate simulations-salarié: frais pro - abonnement transports publics 3`] = `"[4380,0,3200,2551,2354]"`;

exports[`calculate simulations-salarié: frais pro - abonnement transports publics 4`] = `"[4356,0,3200,2527,2330]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 1`] = `"[2459,0,2000,1521,1487]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 2`] = `"[4300,0,3000,2135,1945]"`;

exports[`calculate simulations-salarié: frais pro - titres restaurant 3`] = `"[2503,0,2000,1493,1458]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 1`] = `"[4382,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 2`] = `"[4382,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 3`] = `"[5008,0,3200,2913,2617]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 4`] = `"[4382,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 5`] = `"[4390,0,3200,2548,2349]"`;

exports[`calculate simulations-salarié: frais pro - transports personnels seul 6`] = `"[4118,0,3200,2583,2381]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 1`] = `"[2522,0,2000,1636,1601]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 2`] = `"[2481,0,2000,1606,1572]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 3`] = `"[2592,0,2000,1636,1601]"`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 4`] = `
"[2518,0,2000,1632,1598]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 5`] = `
"[2485,0,2000,1606,1572]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 6`] = `
"[2469,0,2000,1601,1566]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 7`] = `
"[3330,2446,2000,1919,1886]
Notifications affichées : contrat salarié . temps de travail . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié: heures supplémentaires et complémentaires 8`] = `
"[3279,2286,2000,1889,1856]
Notifications affichées : contrat salarié . temps de travail . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 1`] = `"[4070,0,3000,2353,2336]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 2`] = `"[4070,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 3`] = `"[4070,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 4`] = `"[4070,0,3000,2353,1911]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 5`] = `"[4070,0,3000,2353,2219]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 6`] = `"[12886,0,9000,7156,6052]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 7`] = `"[12886,0,9000,7156,6342]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 8`] = `"[12886,0,9000,7156,6859]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 9`] = `"[4070,0,3000,2353,2178]"`;

exports[`calculate simulations-salarié: impôt sur le revenu - quotient familial 10`] = `"[4070,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 1`] = `"[4070,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 2`] = `
"[41833,0,30000,24227,14685]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 3`] = `
"[4960,0,3000,2846,2559]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 4`] = `"[3825,0,3000,2353,2252]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 5`] = `
"[41833,0,30000,24227,14685]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 6`] = `"[4070,0,3000,2626,2485]"`;

exports[`calculate simulations-salarié: impôt sur le revenu 7`] = `
"[41833,0,30000,26966,16655]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: impôt sur le revenu 8`] = `"[4070,0,3000,2353,2107]"`;

exports[`calculate simulations-salarié: inversions 1`] = `"[2000,0,1777,1385,1378]"`;

exports[`calculate simulations-salarié: inversions 2`] = `"[3463,0,2554,2000,1889]"`;

exports[`calculate simulations-salarié: inversions 3`] = `"[3668,0,2703,2117,2000]"`;

exports[`calculate simulations-salarié: lodeom 1`] = `
"[1588,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom 2`] = `"[2081,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom 3`] = `"[3825,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom 4`] = `"[5428,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom 5`] = `"[7784,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 1`] = `
"[1588,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 2`] = `"[2081,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 3`] = `"[3344,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 4`] = `"[5248,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom compétitivité renforcée 5`] = `"[7784,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 1`] = `
"[1588,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 2`] = `"[2081,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 3`] = `"[3194,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 4`] = `"[4552,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: lodeom innovation et croissance 5`] = `"[7724,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié: stage 1`] = `
"[500,0,500,500,500]
Notifications affichées : contrat salarié . stage . avertissement, contrat salarié . stage . contrôle gratification minimale"
`;

exports[`calculate simulations-salarié: stage 2`] = `
"[2484,0,2000,1750,1750]
Notifications affichées : contrat salarié . stage . avertissement"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 1`] = `
"[1601,0,1521,1195,1195]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 2`] = `"[3382,0,2500,1979,1869]"`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 3`] = `
"[1588,0,1521,1170,1170]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: taux spécifiques retraite complémentaire 4`] = `"[3342,0,2500,1938,1830]"`;

exports[`calculate simulations-salarié: temps partiel 1`] = `"[2536,2188,2000,1561,1527]"`;

exports[`calculate simulations-salarié: temps partiel 2`] = `"[2501,2500,1857,1448,1428]"`;

exports[`calculate simulations-salarié: temps partiel 3`] = `
"[1122,1750,1000,770,770]
Notifications affichées : contrat salarié . temps de travail . temps partiel . contrôle temps min"
`;

exports[`calculate simulations-salarié: treizième mois 1`] = `"[3345,0,2300,1950,1842]"`;

exports[`calculate simulations-salarié: treizième mois 2`] = `"[3794,2965,2300,2186,2071]"`;

exports[`calculate simulations-salarié: treizième mois 3`] = `"[2984,0,2300,1799,1733]"`;

exports[`calculate simulations-salarié: échelle de salaires 1`] = `
"[123,0,100,57,57]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 2`] = `
"[278,0,250,176,176]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 3`] = `
"[535,0,500,374,374]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 4`] = `
"[793,0,750,572,572]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 5`] = `
"[1050,0,1000,770,770]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 6`] = `
"[1308,0,1250,968,968]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 7`] = `
"[1566,0,1500,1165,1165]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié: échelle de salaires 8`] = `"[2419,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié: échelle de salaires 9`] = `"[3360,0,2500,1957,1848]"`;

exports[`calculate simulations-salarié: échelle de salaires 10`] = `"[4070,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié: échelle de salaires 11`] = `"[5428,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié: échelle de salaires 12`] = `"[7079,0,5000,3948,3298]"`;

exports[`calculate simulations-salarié: échelle de salaires 13`] = `
"[14315,0,10000,7958,5892]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 14`] = `
"[28342,0,20000,15969,10359]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 15`] = `
"[128588,0,100000,87157,45821]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié: échelle de salaires 16`] = `
"[1244012,0,1000000,896257,445643]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;
